--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <body>
 <h1>Kaggle Projects</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<p>Databricks notebooks for Kaggle projects</p>
+<a href="https://raw.githubusercontent.com/sshepherd-wm/Kaggle_Projects/master/Titanic_Survival_Notebook.html">Titanic Survival Prediction Notebook</a>
 </body>
 </html>
