--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <body>
 <h1>Kaggle Projects</h1>
 <p>Databricks notebooks for Kaggle projects</p>
-<a href="https://raw.githubusercontent.com/sshepherd-wm/Kaggle_Projects/master/Titanic_Survival_Notebook.html">Titanic Survival Prediction Notebook</a>
+<a href="Titanic_Survival_Notebook.html">Titanic Survival Prediction Notebook</a>
 </body>
 </html>
